--- a/src/Broadcast/Broadcast.csproj
+++ b/src/Broadcast/Broadcast.csproj
@@ -33,6 +33,14 @@
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Unturned|AnyCPU'">
+    <OutputPath>%25UNTURNED%25\Servers\Server1\Rocket\Plugins\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Rocket.Plugins.Dependencies.4.9.3\lib\net20\Assembly-CSharp.dll</HintPath>
