--- a/src/Broadcast/packages.config
+++ b/src/Broadcast/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MSBuild.Obfuscar" version="2.2.26" targetFramework="net40" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net40" />
   <package id="Obfuscar" version="2.2.26" targetFramework="net40" developmentDependency="true" />
   <package id="Rocket.Plugins.Dependencies" version="4.9.5" targetFramework="net40" developmentDependency="true" />
 </packages>
